pxc/tests/test_109_fixed/darr.px
namespace darr;
import common -;

{
  const x = make_vector{int}(1, 2, 3);
  cslice{int} y = x;
  darray{int} z = y; // error
  println(z);
}
